--- a/src/pages/visualization-card/visualization-card.html
+++ b/src/pages/visualization-card/visualization-card.html
@@ -1,12 +1,11 @@
-
 <div class="visualizationCard">
   <div *ngIf="!isVisualizationDataLoaded">
     <div class="visualizationLoader">
-      <page-loading loadingSize="large" loadingMessage = "Loading Visualization data"></page-loading>
+      <page-loading loadingSize="large" loadingMessage="Loading Visualization data"></page-loading>
     </div>
   </div>
 
-  <div *ngIf="isVisualizationDataLoaded" >
+  <div *ngIf="isVisualizationDataLoaded">
     <div *ngIf="visualizationSelection.bottom =='charts'">
       <ion-row *ngIf="chartObject">
         <ion-col col-10>
@@ -14,8 +13,9 @@
         </ion-col>
         <ion-col col-2>
           <div *ngFor="let chart of visualizationOptions.right" class="chart-icon">
-            <button [disabled]="visualizationSelection.right == chart.type|| chart.isDisabled"  mini ion-fab color="light" (tap)="drawChart(chart.type)">
-              <img [src]="chart.path" >
+            <button [disabled]="visualizationSelection.right == chart.type|| chart.isDisabled" mini ion-fab
+                    color="light" (tap)="drawChart(chart.type)">
+              <img [src]="chart.path">
             </button>
           </div>
         </ion-col>
@@ -28,19 +28,23 @@
         <ion-col>
           <table class="table table-bordered">
             <thead>
-            <tr *ngFor="let header of tableObject.headers">
-              <th *ngFor="let table_column of tableObject.columns"></th>
-              <th *ngFor="let header_column of header.items" [colSpan]="header_column.span" style="text-align: center">
-                {{ header_column.name }}
-              </th>
-            </tr>
+              <tr *ngFor="let header of tableObject.headers; let j = index">
+                <th *ngFor="let table_column of tableObject.columns; let i = index" style="text-align: center">
+                  {{ tableObject.titles.rows[j] }} / {{ tableObject.titles.column[i]}}
+                </th>
+                <th *ngFor="let header_column of header.items" [colSpan]="header_column.span"
+                    style="text-align: center">
+                  {{ header_column.name }}
+                </th>
+              </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let row of tableObject.rows">
-              <td *ngFor="let header_column of row.items" style="text-align: center;vertical-align: middle" [attr.rowspan]="header_column.row_span">
-                {{ header_column.val }}
-              </td>
-            </tr>
+              <tr *ngFor="let row of tableObject.rows">
+                <td *ngFor="let header_column of row.items" style="text-align: center;vertical-align: middle"
+                    [attr.rowspan]="header_column.row_span">
+                  {{ header_column.val }}
+                </td>
+              </tr>
             </tbody>
           </table>
         </ion-col>
@@ -48,14 +52,15 @@
     </div>
 
     <div *ngIf="visualizationSelection.bottom =='dictionary'">
-      <page-metadata-dictionary [metadataIdentifiers] = "metadataIdentifiers" ></page-metadata-dictionary>
+      <page-metadata-dictionary [metadataIdentifiers]="metadataIdentifiers"></page-metadata-dictionary>
     </div>
 
     <ion-row *ngIf="tableObject || chartObject">
-      <ion-col >
+      <ion-col>
             <span *ngFor="let visualization of visualizationOptions.bottom" class="chart-icon">
-              <button [disabled]="visualizationSelection.bottom == visualization.type" mini ion-fab color="light" (tap)="changeVisualization(visualization.type)">
-                <img [src]="visualization.path" >
+              <button [disabled]="visualizationSelection.bottom == visualization.type" mini ion-fab color="light"
+                      (tap)="changeVisualization(visualization.type)">
+                <img [src]="visualization.path">
               </button>
             </span>
       </ion-col>
