remove loading messages on entry selecteion and align loading icon at center on data entry,event capture as well as report selection

--- a/src/pages/dash-board-home/dash-board-home.html
+++ b/src/pages/dash-board-home/dash-board-home.html
@@ -14,7 +14,7 @@
 </ion-header>
 
 
-<ion-content class="dashboardHome slide-in-from-left">
+<ion-content class="dashboardHome">
 <ion-grid>
 
   <ion-row>
