--- a/src/pages/data-set-sync/data-set-sync.html
+++ b/src/pages/data-set-sync/data-set-sync.html
@@ -9,12 +9,28 @@
       <ion-row>
         <ion-col >
           <div *ngFor="let dataSetId of dataSetIds" >
-            <div *ngIf="dataSetsSyncObjects[dataSetId].name != ''">
-              <div class="contents" (tap)="viewMoreDetailsOnEntryForm(dataSetId)">
-                <p >
-                  <b>Form : </b>{{dataSetsSyncObjects[dataSetId].name}}<br>
-                  <b>Data : </b>{{dataSetsSyncObjects[dataSetId].dataValues.length}}
-                </p>
+            <div *ngIf="dataSetsSyncObjects[dataSetId] && dataSetsSyncObjects[dataSetId].name != ''">
+              <div class="contents">
+                <ion-row>
+                  <ion-col col-11 (tap)="viewMoreDetailsOnEntryForm(dataSetId)">
+                    <div  >
+                      <p >
+                        <b>Form : </b>{{dataSetsSyncObjects[dataSetId].name}}<br>
+                        <b>Data : </b>{{dataSetsSyncObjects[dataSetId].dataValues.length}}
+                      </p>
+                    </div>
+                  </ion-col>
+                  <ion-col col-1 (tap)="dataSetDataDeleteConfirmation(dataSetsSyncObjects[dataSetId].name,dataSetId)">
+                    <div *ngIf="!isDataSetDataDeletionOnProgress[dataSetId]">
+                      <button color="danger" class="normalButton" ion-button full min clear text-capitalize >
+                        <ion-icon name="md-trash"></ion-icon>
+                      </button>
+                    </div>
+                    <div *ngIf="isDataSetDataDeletionOnProgress[dataSetId]">
+                      <page-loading loadingSize="small"></page-loading>
+                    </div>
+                  </ion-col>
+                </ion-row>
               </div>
             </div>
           </div>
